// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldValueToggleFilter render - active 1`] = `
<button
  aria-pressed="true"
  class="euiButtonEmpty euiFilterButton euiFilterButton-hasActiveFilters emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-hasActiveFilters"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text euiFilterButton__text emotion-euiFilterButton__text"
    >
      <span
        class="euiFilterButton__textShift emotion-euiFilterButton__textShift"
        data-text="Kibana"
        title="Kibana"
      >
        Kibana
      </span>
    </span>
  </span>
</button>
`;

exports[`FieldValueToggleFilter render - active negated - custom negated name 1`] = `
<button
  aria-pressed="true"
  class="euiButtonEmpty euiFilterButton euiFilterButton-hasActiveFilters emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-hasActiveFilters"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text euiFilterButton__text emotion-euiFilterButton__text"
    >
      <span
        class="euiFilterButton__textShift emotion-euiFilterButton__textShift"
        data-text="Others"
        title="Others"
      >
        Others
      </span>
    </span>
  </span>
</button>
`;

exports[`FieldValueToggleFilter render - active negated 1`] = `
<button
  aria-pressed="true"
  class="euiButtonEmpty euiFilterButton euiFilterButton-hasActiveFilters emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-hasActiveFilters"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text euiFilterButton__text emotion-euiFilterButton__text"
    >
      <span
        class="euiFilterButton__textShift emotion-euiFilterButton__textShift"
        data-text="Not Kibana"
        title="Not Kibana"
      >
        Not Kibana
      </span>
    </span>
  </span>
</button>
`;

exports[`FieldValueToggleFilter renders 1`] = `
<button
  aria-pressed="false"
  class="euiButtonEmpty euiFilterButton emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text euiFilterButton__text emotion-euiFilterButton__text"
    >
      <span
        class="euiFilterButton__textShift emotion-euiFilterButton__textShift"
        data-text="Kibana"
        title="Kibana"
      >
        Kibana
      </span>
    </span>
  </span>
</button>
`;
